# dbt-bootcamp

./: .gitignore  CONTRIBUTING.md  EXERCISES.md  QUICKSTART.md  README.md
airbnb/: dbt_project.yml
airbnb/analyses/: full_moon_no_sleep.sql
airbnb/macros/: logging.sql  no_empty_strings.sql  select_positive_values.sql
airbnb/models/: schema.yml  sources.yml
airbnb/models/dim/: dim_hosts_cleansed.sql  dim_listings_cleansed.sql  dim_listings_w_hosts.sql
airbnb/models/fct/: fct_reviews.sql
airbnb/models/mart/: mart_fullmoon_reviews.sql
airbnb/models/src/: src_hosts.sql  src_listings.sql  src_reviews.sql
airbnb/tests/: consistent_created_at.sql  unit_tests.yml
airbnb/tests/generic/: minimum_row_count.sql  positive_values.sql
dbtlearn/: README.md  dbt_project.yml  profiles.yml.example
dbtlearn/macros/: cents_to_dollars.sql  limit_data_in_dev.sql
dbtlearn/models/marts/: dim_customers.sql  fct_orders.sql  schema.yml
dbtlearn/models/staging/: schema.yml  stg_customers.sql  stg_orders.sql  stg_payments.sql
dbtlearn/seeds/: raw_customers.csv  raw_orders.csv  raw_payments.csv
orchestration/: pyproject.toml  setup.py
orchestration/orchestration/: assets.py  constants.py  definitions.py  project.py
transform/macros/: variables.sql
transform/models/: dashboards.yml  schema.yml  sources.yml
transform/models/fct/: fct_reviews.sql
transform/models/src/: src_hosts.sql  src_listings.sql  src_reviews.sql
transform/tests/: consistent_created_at.sql
transform/tests/generic/: minimum_row_count.sql
