[project]
name = "orchestration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "dagster~=1.12.0",
    "dagster-cloud~=1.12.0",
    "dagster-dbt~=0.28.0",
    "dbt-core~=1.11.0",
    "dbt-snowflake~=1.11.0",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver~=1.12.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "orchestration.definitions"
code_location_name = "orchestration"